class/j19/networkPolicy/networkpolicy1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy01
 namespace: default
spec:
 podSelector:
  matchLabels:
   app: web1
 policyTypes:
  - Ingress
 ingress:
  - from:
    - podSelector:
       matchLabels:
         app: web2
    ports:
     - protocol: TCP
       port: 80
