class/j19/networkPolicy/networkpolicy3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mynetpolicy01
 namespace: default
spec:
 podSelector: {}
 policyTypes:
  - Ingress
